shipping/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: shipping-service
  namespace: e-commerce
spec: 
  replicas: 1 
  selector: 
    matchLabels:
      app: shipping-service
  template: 
    metadata:
      labels:
        app: shipping-service
    spec: 
      containers:
      - name: shipping-service
        image: ghcr.io/fahram/shipping-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
